Corretto errore: Quando clicco su un punto e c'è già un altro punto aperto, resta l'effetto di pulse (solo in shiatsumap)

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </div>
             
 		<div id="tooltip"></div> <!-- TOOLTIP -->
+		<div id="tooltipmenu"><span id="tooltipmenu_txt"></span></div> <!-- TOOLTIP DEL MENU -->
         
         <!-- CONTENITORE DI TUTTI I BOX DELLA UI -->
         <div id="interfaccia"
