Aggiunta puntina per fissare il menu espanso su mobile

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                             <rect x="10" y="8" width="12" height="8" rx="0"></rect>
                         </svg>
                     </div>
+                    <div id="lF" class="lll" onclick="SCHEDA.fissaMenuEspanso(SCHEDA.livelloApertura==2 ? 3 : 2);">
+                    </div>
                 	<div id="l3" class="lll" onClick="SCHEDA.setMenuDim(3);">
                         <svg viewBox="0 0 32 32">
                             <line x1="10" x2="22" y1="8" y2="8"></line>
