--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <line x1="10" x2="22" y1="16" y2="16"></line>
                         </svg>
                     </div>
-                	<div id="l2" class="lll" onClick="SCHEDA.setMenuDim(2);">
+                	<div id="l2" class="lll" onClick="SCHEDA.setMenuDim(2,true);">
                         <svg viewBox="0 0 32 32">
                             <line x1="10" x2="22" y1="12" y2="12"></line>
                             <line x1="10" x2="22" y1="16" y2="16"></line>
