--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 {{TXT_VersioneNumero}} 1.0
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> dr. Vittorio Piacenza | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, dr. Antonino Caldarella
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino
                 <br>
                 <br>
                 <br>
