Completate le schede dei meridiani, completate le schede dei muscoli, sistemata versione per AnatomyMap, corretti alcuni errori

--- a/index.html
+++ b/index.html
@@ -499,6 +499,8 @@
                     <i>{{TXT_Impostazioni}}</i><span id="notificaGenerale"></span></div>
             </div>
             
+            <div id="p_impostazioniAM" onClick="MENU.visImpostazioni();"><svg viewBox="0 0 12 48"></div>
+                
             <div id="pulsanti_modello"> <!-- MENU ANATOMIA -->
             	<div id="labelModello">
                 	{{TXT_Anatomy}}
