Blocco modifiche inizio 2022

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         
         <!-- LOGHI -->
     	<div id="logoSovra"></div>
-		<div id="logo_inizio"></div>
+		<div id="logo_inizio">
+        	<div id="car_inizio">Loading...</div>
+        </div>
 		<div id="poweredby_inizio">Powered by:</div>
         
         <!-- CONTENITORE 3D - THREEJS -->
