--- a/index.html
+++ b/index.html
@@ -502,10 +502,10 @@
                 	 onmousedown="MODELLO.slw(event,'visceri');"></div>
                 <!--<div id="p_piuma" class="p_noTxt" onClick="swAnimate();">
                     <i>{{TXT_Pausa3D}}</i></div>-->
-                <div id="p_centro" class="p_noTxt" onClick="centro();" title="{{TXT_CentraModello}}"></div>
-                <div id="p_selected" class="p_noTxt" onClick="MENU.visSelected();" title="{{TXT_ElementiSelezionati}}"></div>
-                <div id="p_pins" class="p_noTxt" onClick="MODELLO.swPins();" title="{{TXT_MostraPin}}"></div>
-                <div id="p_rifletti" class="p_noTxt" onClick="MODELLO.rifletti();" title="{{TXT_RiflettiModello}}"></div>
+                <div id="p_centro" onClick="centro();" title="{{TXT_CentraModello}}"></div>
+                <div id="p_selected" onClick="MENU.visSelected();" title="{{TXT_ElementiSelezionati}}"></div>
+                <div id="p_pins" onClick="MODELLO.swPins();" title="{{TXT_MostraPin}}"></div>
+                <div id="p_rifletti" onClick="MODELLO.rifletti();" title="{{TXT_RiflettiModello}}"></div>
             </div>
             <div id="sliderAnatomia"><div class="slider"><div></div></div></div>
                 
