Corretti piccoli refusi

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                     <div>
                         <div><img src="img/multi_device.png" width="46" height="48" style="margin-left:4px;"></div>
                         <div><b>Connettività</b><br>
-                    Dalla questa versione è possibile connettere 2 dispositivi contemporaneamente senza che uno dei due venga disconnesso, favorendo così l'utilizzo contemporaneo da PC e smartphone/tablet.</div>
+                    Da questa versione è possibile connettere 2 dispositivi contemporaneamente senza che uno dei due venga disconnesso, favorendo così l'utilizzo contemporaneo da PC e smartphone/tablet.</div>
                     </div>
                     
                     <div>
