Inserito controllo apertura schede per multidevice

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
             	<div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div>
                 <div id="contFeatures" class="popup_cont">
                     <h2>Benvenuto nella versione 1.1</h2>
-                    <p class="descr">Abbiamo cambiato alcune caratteristiche dell'applicazione al fine direnderla sempre più facile da usare, intuitiva e veloce.</p>
+                    <p class="descr">Abbiamo cambiato alcune caratteristiche dell'applicazione al fine di renderla sempre più facile da usare, intuitiva e veloce.</p>
                 
 					<div>
                         <div><img src="icons/android-icon-48x48.png" width="48" height="48" ></div>
@@ -531,7 +531,7 @@
                     <div>
                         <div><img src="img/ico_smartphone.png" width="46" height="48" style="margin-left:4px;"></div>
                         <div><b>Versione mobile</b><br>
-                    La versione mobile è stato rivista completamente per consentirti un accesso ancora più rapido ai contenuti e alle funzionalità.</div>
+                    La versione mobile è stata rivista completamente per consentirti un accesso ancora più rapido ai contenuti e alle funzionalità.</div>
                     </div>
                     
                     <div>
