--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">        
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <script src="cordova.js"></script>
         
         <!-- ICONE DELL'APP -->
         <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
