--- a/index.html
+++ b/index.html
@@ -482,14 +482,14 @@
             	<div id="labelVersione" class="popup_label"><div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
             	<div id="contVersione" class="popup_cont">
                 <div id="logoVersione"></div><br>
-                {{TXT_VersioneNumero}} 1.0
+                {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
                <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino
                 <br>
                 <br>
                 <br>
-                &copy;&reg; <script language="javascript">d = new Date();document.write(d.getFullYear());</script> <b>{{[§]}}</b> - {{TXT_DirittiRiservati}}
+                <span style="font-family:Verdana;">&copy;&reg;</span> <script language="javascript">d = new Date();document.write(d.getFullYear());</script> <b>{{[§]}}</b> - {{TXT_DirittiRiservati}}
                 </div>
             </div>
             <div id="dispositivi" class="popup"> <!-- DISPOSITIVI CONNESSI -->
@@ -499,7 +499,7 @@
             <div id="features" class="popup"> <!-- NUOVA VERSIONE -->
             	<div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div>
                 <div id="contFeatures" class="popup_cont">
-                    <h2>Benvenuto nella versione 1.1</h2>
+                    <h2>Benvenuto nella versione 1.2</h2>
                     <p class="descr">Abbiamo cambiato alcune caratteristiche dell'applicazione al fine di renderla sempre più facile da usare, intuitiva e veloce.</p>
                 
 					<div>
