--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino, Nicola Revello
                 <br>
                 <br>
                 <br>
@@ -559,6 +559,7 @@
                 	 onmousedown="MODELLO.slw(event,'pelle');"
                 	 onTouchStart="MODELLO.slw(event,'pelle');"></div>
                 <div id="p_liv_muscoli"
+                     class="disattLiv"
                      onWheel="MODELLO.opw(event,'Muscoli');"
                 	 onmousedown="MODELLO.slw(event,'muscoli');"
                 	 onTouchStart="MODELLO.slw(event,'muscoli');"></div>
