Aggiunto sistema drag&drop

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 		<div id="lb_anatomy"><span>{{TXT_SelettoreAnatomia}}</span></div> <!-- LABEL ANATOMIA () -->
 		<div id="tooltip"></div> <!-- TOOLTIP -->
 		<div id="tooltipmenu"><span id="tooltipmenu_txt"></span></div> <!-- TOOLTIP DEL MENU -->
+		<div id="lb_move"><span></span></div> <!-- LABEL SPOSTAMENTO ELEMENTI -->
+		<div id="lb_placeholder"></div> <!-- PLACEHOLDER SPOSTAMENTO ELEMENTI -->
         
         <!-- CONTENITORE DI TUTTI I BOX DELLA UI -->
         <div id="interfaccia"
@@ -501,7 +503,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino, Nicola Revello
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani.
                 <br>
                 <br>
                 <br>
