Migliorata gestione foto e inserita scheda visualizzazione gallery globale.

--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
                         	<div id="pulsante_pazienti" class="frdx" onClick="SCHEDA.selElenco('pazienti');">{{TXT_ElPazienti}}</div>
                         	<div id="pulsante_fornitori" class="frdx" onClick="SCHEDA.selElenco('fornitori');">{{TXT_ElFornitori}}</div>
                         	<div id="pulsante_servizi" class="frdx" onClick="SCHEDA.selElenco('servizi');">{{TXT_ElServizi}}</div>
+                            <span class="separatorePulsanti"></span>
+                        	<div id="pulsante_foto" class="frdx" onClick="PH.car_gallery();">{{TXT_ElFoto}}</div>
                         </div>
                     </div>
 				</div>
