--- a/index.html
+++ b/index.html
@@ -289,10 +289,6 @@
             
             
             <!-- POPUPS -->
-            <div id="elencoSets" class="popup"> <!-- CATALOGO SET AGGIUNTIVI -->
-            	<div id="labelSets" class="popup_label">{{TXT_Mappe}}<div class="popup_chiudi" onClick="MENU.visElencoSets();"></div></div>
-            	<div id="contSets" class="popup_cont"></div>
-            </div>
             <div id="archives" class="popup"> <!-- ARCHIVI IMMAGINI E FILES -->
             	<div id="labelArchives" class="popup_label">{{TXT_Gallery}}<div class="popup_chiudi" onClick="MENU.visArchives();"></div></div>
             	<div id="contArchives" class="popup_cont">
@@ -523,7 +519,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani.
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani.
                 <br>
                 <br>
                 <br>
