--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 </div>
             </div>
             <div id="impset" class="popup"> <!-- IMPOSTAZIONI DEL SET -->
-            	<div id="labelImpset" class="popup_label"><div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
+            	<div id="labelImpset" class="popup_label"><b></b><div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
             	<div id="contImpset" class="popup_cont">
     				<!-- da popolare -->
                 </div>
