Correzioni testuali e aggistamenti Lovato

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     </div>
                 </div>
                 
-                <div class="noVisPiu">Non visualizzare più <input type="checkbox" id="no_info_features" name="no_info_features" value="1" onclick="localStorage.setItem(this.dataset.name,this.checked);" data-name="no_info_features"></div>
+                <div class="noVisPiu">Non visualizzare più <input type="checkbox" id="no_info_features" name="no_info_features_1_3" value="1" onclick="localStorage.setItem(this.dataset.name,this.checked);" data-name="no_info_features_1_3"></div>
             </div>
            	<!---------------------------- fine popups ... -->
             
