Inseriti crediti su app. Correzione bug su stampa stage su Win. Correzioni testuali.

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani.
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Daniela Borghese | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani, Carmelo Perlongo.
                 <br>
                 <br>
                 <br>
