Correzione note di release

--- a/index.html
+++ b/index.html
@@ -553,11 +553,11 @@
                         <div>
                           <b>Personalizzazione e fruibilità</b><br>
                             Potrai gestire i seguenti elementi:<br>
-                            - Dimensioni del testo<br>
-                            - Spostamento dei trattamenti e le cartelle cliniche con il mouse o con il dito<br>
+                            - Scegliere le dimensioni del testo<br>
+                          - Spostare i trattamenti e le cartelle cliniche con il mouse o con il dito<br>
                             - 
-                          Tipo di puntatore (mouse o dito) per gli schermi multi-touch<br>
-                          - Tipo di utilizzo: olistico o medico
+                          Scegliere il tipo di puntatore (mouse o dito) per gli schermi multi-touch<br>
+                          - Indicare il tipo di utilizzo: olistico o medico
                       </div>
                     </div>
                     
