Correzione note di release

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 					<div>
                         <div><img src="sets/auricologia/img/logoNero.png" width="50" height="50"></div>
                         <div><b>AuriculoMap</b><br>
-                        La nuova mappa dedicata all'agopuntura auricolare, ricca di contenuti e protocolli.</div>
+                        La nuova mappa dedicata all'agopuntura auricolare, ricca di contenuti e protocolli, curata dal dr. Antonello Lovato</div>
                     </div>
                    
                     <div>
