Correione su campo password per bug che mostrava il default value sulla ricerca dei pazienti.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         	<div id="lista_servizi"></div>
                         	<div id="requestPwd">
                             	<span>{{TXT_PatientPwdConfirm}}</span>
-                                <input type="password" id="patientPwdRequest">
+                                <input type="text" id="patientPwdRequest">
                                 <div class="btn_invia" onclick="MENU.patientPwdConf();">Invia</div>
                             </div>
                         </div>
