--- a/index.html
+++ b/index.html
@@ -511,19 +511,19 @@
                 </div>
                 <div id="img_pulsanti">
                     <div id="img_draw_tools">
-                        <div id="img_draw_undo" onClick="CNV.undoDraw();"></div>
-                        <div id="img_draw_dims" onClick="CNV.showDrawDims();">
-                            <span id="dw1" data-value="2" onClick="CNV.setDrawWidth(this);"></span>
-                            <span id="dw3" data-value="10" onClick="CNV.setDrawWidth(this);"></span>
-                            <span id="dw5" data-value="18" onClick="CNV.setDrawWidth(this);"></span>
-                            <span id="dw7" data-value="smoth" onClick="CNV.setDrawStyle(this);"></span>
+                        <div id="img_draw_undo" onClick="DW.undoDraw();"></div>
+                        <div id="img_draw_dims" onClick="DW.showDrawDims();">
+                            <span id="dw1" data-value="2" onClick="DW.setDrawWidth(this);"></span>
+                            <span id="dw3" data-value="10" onClick="DW.setDrawWidth(this);"></span>
+                            <span id="dw5" data-value="18" onClick="DW.setDrawWidth(this);"></span>
+                            <span id="dw7" data-value="smoth" onClick="DW.setDrawStyle(this);"></span>
                         </div>
-                        <div id="img_draw_cols" onClick="CNV.showDrawCols();">
-                            <span id="dc1" data-value="#000" onClick="CNV.setDrawColor(this);"></span>
-                            <span id="dc2" data-value="#D00" onClick="CNV.setDrawColor(this);"></span>
-                            <span id="dc3" data-value="#0B0" onClick="CNV.setDrawColor(this);"></span>
-                            <span id="dc4" data-value="#00C" onClick="CNV.setDrawColor(this);"></span>
-                            <span id="dc5" data-value="#FC0" onClick="CNV.setDrawColor(this);"></span>
+                        <div id="img_draw_cols" onClick="DW.showDrawCols();">
+                            <span id="dc1" data-value="#000" onClick="DW.setDrawColor(this);"></span>
+                            <span id="dc2" data-value="#D00" onClick="DW.setDrawColor(this);"></span>
+                            <span id="dc3" data-value="#0B0" onClick="DW.setDrawColor(this);"></span>
+                            <span id="dc4" data-value="#00C" onClick="DW.setDrawColor(this);"></span>
+                            <span id="dc5" data-value="#FC0" onClick="DW.setDrawColor(this);"></span>
                         </div>
                     </div>
                     <div id="img_annulla" onClick="PH.chiudi();" class="btn">ANNULLA</div>
