Archivi demo nuovi e correzione bug

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     	<div id="logoSovra"></div>
 		<div id="logo_inizio">
         	<div id="car_inizio">Loading...</div>
+            <div id="partner_inizio"></div>
         </div>
         
         <!-- CONTENITORE 3D - THREEJS -->
