--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">        
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <script>
+        window.usingCordova = false;
+        </script>
         <script src="cordova.js"></script>
         
         <!-- ICONE DELL'APP -->
