--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script>
         window.usingCordova = false;
         </script>
-        <script src="cordova.js"></script>
+        <script src="cordova.js" onload="javascript:window.usingCordova = true;"></script>
         
         <!-- ICONE DELL'APP -->
         <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57_B.png">
