aggiunta logo partner su stage vuoto

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         
         <!-- LOGHI -->
     	<div id="logoSovra"></div>
+    	<div id="logoPartner"></div>
 		<div id="logo_inizio">
         	<div id="car_inizio">Loading...</div>
             <div id="partner_inizio"></div>
