Aggiunto box apertura 3D allo stage

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 		<div id="tooltipmenu"><span id="tooltipmenu_txt"></span></div> <!-- TOOLTIP DEL MENU -->
 		<div id="lb_move"><span></span></div> <!-- LABEL SPOSTAMENTO ELEMENTI -->
 		<div id="lb_placeholder"></div> <!-- PLACEHOLDER SPOSTAMENTO ELEMENTI -->
+		<div id="st_anatomy">
+            <div>
+                <div>{{TXT_ApriModello3D}}</div>
+                <div id="modelsCont"></div>
+            </div>
+        </div> <!-- SELETTORE ANATOMIA DA STAGE -->
         
         <!-- CONTENITORE DI TUTTI I BOX DELLA UI -->
         <div id="interfaccia"
