--- a/index.html
+++ b/index.html
@@ -359,6 +359,12 @@
                    		<b id="t_TOUCH" data-value="TOUCH" onClick="setPointerType('TOUCH');"></b>
                    </span>
                </p>
+               <p id="guideSel">
+                   <i>{{TXT_ShowGuide}}:</i>
+                   <span>
+                        <input type="checkbox" id="no_guida_settings" name="no_guida_settings" value="1" onClick="GUIDA.swGuide(this);"><b onClick="GUIDA.showNow();">{{TXT_ShowNow}}</b>
+                   </span>
+               </p>
                 </div>
             </div>
             <div id="notifiche" class="popup"> <!-- NOTIFICHE -->
@@ -846,21 +852,30 @@
             <div class="fumetti_freccia"></div>
         	<div class="fumetti_cont">
             	<div class="fumetti_chiudi" onClick="GUIDA.nasFumetto();" onMouseOver="GUIDA.overChiudi=true;" onMouseOut="GUIDA.overChiudi=false;"></div>
-            	<div>
-                	<h1>{{TXT_GuidaGenericaTit}}</h1>
-                    <p>{{TXT_MessaggioBenvenuto}}<br><br>{{TXT_GuidaGenericaTxt}}</p>
-                    <div class="btnReference" onClick="REF.open();">{{TXT_ReferenceGuide}}</div>
+            	<div id="guida_generica_info">
+                    <div>
+                        <h1>{{TXT_GuidaGenericaTit}}</h1>
+                        <p>{{TXT_MessaggioBenvenuto}}<br><br>{{TXT_GuidaGenericaTxt}}</p>
+                    </div>
+                    <div id="colSel">
+                        <p>{{TXT_ColoreAmbiente}}:</p>
+                        <p>
+                            <span class="c2" onClick="selCol(2);"></span>
+                            <span class="c1" onClick="selCol(1);"></span>
+                            <span class="c0" onClick="selCol(0);"></span>
+                        </p>
+                    </div>
+                    <div class="noVisPiu">{{TXT_noVisPiu}} <input type="checkbox" id="no_guida_generica" name="no_guida_generica" value="1"></div>
+                    <div id="loginGuida">
+                        <i>{{TXT_LinkRapidi}}:</i>
+                        <div class="btnReference" onClick="REF.open();">{{TXT_ReferenceGuide}}</div>
+                        <div class="btnFeedback" onClick="MENU.visFeedback();">{{TXT_Feedback}}</div>
+                        <span class="btn_invia" onclick="MENU.visLogin();" id="btn_loginGuida">LOGIN</span></div>
                 </div>
-                <div id="colSel">
-                	<p>{{TXT_ColoreAmbiente}}:</p>
-                    <p>
-                        <span class="c2" onClick="selCol(2);"></span>
-                        <span class="c1" onClick="selCol(1);"></span>
-                        <span class="c0" onClick="selCol(0);"></span>
-                    </p>
+            	<div id="guida_generica_mappe">
+                    <i>{{TXT_CaricaMappa}}:</i>
+                    <div id="guida_generica_sets"></div>
                 </div>
-        		<div class="noVisPiu">{{TXT_noVisPiu}} <input type="checkbox" id="no_guida_generica" name="no_guida_generica" value="1" onClick="GUIDA.noVis(this);"></div>
-                <div id="loginGuida">{{TXT_loginGuida}}<span class="btn_invia" onclick="MENU.visLogin();setTimeout(function(){GUIDA.nasFumetto();},300);" id="btn_loginGuida" title="" style="display: inline-block;">LOGIN</span></div>
             </div>
             <div class="fumetti_freccia"></div>
         </div>
