Aggiunto Di Novi ai crediti

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Roman Henry Clarke, Daniela Borghese | <i>{{TXT_VersioneSpagnola}}:</i> Celia Guadalupe Garza Rosas | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Antonino Caldarella, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani, Carmelo Perlongo, Daglas Gattini, Roberto Taverna.
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Roman Henry Clarke, Daniela Borghese | <i>{{TXT_VersioneSpagnola}}:</i> Celia Guadalupe Garza Rosas | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani, Carmelo Perlongo, Daglas Gattini, Roberto Taverna, Antoine Di Novi.
                 <br>
                 <br>
                 <br>
