Correzione problemi su registrazione utente demo

--- a/index.html
+++ b/index.html
@@ -401,9 +401,29 @@
                         </div>
                         <div>
                         	<input type="text"
-                            	   name="{{TXT_Nominativo}}"
-                            	   id="@|{{TXT_Nominativo}}|1|0"
-                            	   placeholder="{{TXT_Nominativo}}"
+                            	   name="{{TXT_Nome}}"
+                            	   id="@|{{TXT_Nome}}|1|0"
+                                   class="mezza"
+                            	   placeholder="{{TXT_Nome}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                            <input type="text"
+                                    name="{{TXT_Cognome}}"
+                                    id="@|{{TXT_Cognome}}|1|0"
+                                    class="mezza"
+                                    placeholder="{{TXT_Cognome}}"
+                                    autocomplete="off"
+                                    autocorrect="off"
+                                    autocapitalize="off"
+                                    spellcheck="false">
+                        </div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Email"
+                            	   id="@|Email|1|0|@"
+                            	   placeholder="Email"
                             	   autocomplete="off"
                             	   autocorrect="off"
                             	   autocapitalize="off"
@@ -411,9 +431,9 @@
                         </div>
                     	<div>
                         	<input type="text"
-                            	   name="Email"
-                            	   id="@|Email|1|0|@"
-                            	   placeholder="Email"
+                            	   name="{{TXT_Telefono}}"
+                            	   id="@|{{TXT_Telefono}}|1|0"
+                            	   placeholder="{{TXT_Telefono}}"
                             	   autocomplete="off"
                             	   autocorrect="off"
                             	   autocapitalize="off"
