Gestione moduli su licenze

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
                         <!-- da popolare -->
                     </div>
                     <div id="memorizzaOpenMap">{{TXT_ApriMappa}} <input type="checkbox" id="mem_openMap" name="mem_openMap" value="1" onClick="set_memOpenMap();"></div>
+                    <div id="tueLicenze"><span>{{TXT_TueLicenze}}</span></div>
                 </div>
                 <div id="impostazioni"> <!-- MENU IMPOSTAZIONI -->
                     <div id="labelImpostazioni">{{TXT_Impostazioni}}<div id="chiudi_impostazioni" onClick="MENU.visImpostazioni();"></div>
@@ -803,6 +804,7 @@
                         <button id="CNF_ok" onClick="CONFIRM.nascondi();">{{TXT_OK}}</button>
                         <button id="CNF_lg" onClick="CONFIRM.nascondi();MENU.visLogin();">{{TXT_ACCEDI}}</button>
                         <button id="CNF_pr" onClick="CONFIRM.nascondi();MENU.visPurchases();">{{TXT_ACQUISTA}}</button>
+                        <button id="CNF_lc" onClick="">{{TXT_TueLicenze}}</button>
                         <button id="CNF_an" onClick="CONFIRM.nascondi();">{{TXT_Annulla}}</button>
                     </div>
                 </div>
