--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     	<div id="pulsanti_base">
                         	<span id="titolo_base">
                             	<span class="elMenu" id="impostazioniArchivi" onClick="MENU.visImpset(true);" title="{{TXT_ImpostazioniArchivi}}"></span>
-                                <span id="help_clienti" onClick="GUIDA.visFumetto('guida_archivi',true,true);">?</span>{{TXT_ElGestionale}}</span>
+                                <span id="help_clienti" class="elMenu" onClick="GUIDA.visFumetto('guida_archivi',true,true);">?</span>{{TXT_ElGestionale}}</span>
                             <span id="descrizione_base">{{TXT_GuidaPazientiTxt}}</span>
                         	<div id="pulsante_pazienti" class="frdx" onClick="SCHEDA.selElenco('pazienti');">{{TXT_ElPazienti}}</div>
                         	<div id="pulsante_fornitori" class="frdx" onClick="SCHEDA.selElenco('fornitori');">{{TXT_ElFornitori}}</div>
